# dtc-llm-zoomcamp

./: pyproject.toml
01-Intro/: documents.json  homework.ipynb  minsearch.py  parse-faq.ipynb  rag-intro.ipynb
02-open-source/: homework.ipynb
03-vector-search/: homework.ipynb
04-monitoring/: homework.ipynb
