[tool.poetry]
name = "dtc-llm-zoomcamp"
version = "0.1.0"
description = "DataTalksClub LLM Zoomcamp"
authors = ["Abiodun Allison <allisonabiodun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "^8.14.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
tqdm = "^4.66.4"
openai = "^1.35.0"
requests = "^2.32.3"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pandas-stubs = "^2.2.2.240603"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
